# lab15

./: CMakeLists.txt  CMakeLists.txt.save  helloworld.cpp
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  helloworld
